@@ -32,18 +32,18 @@ class TestBulgaria(unittest.TestCase):
     def test_liberation_day(self):
         for year in range(1990, 2020):
             self.assertIn(date(year, 3, 3), self.holidays)
-    
+
     def test_friday_holiday(self):
-        for year in range(1990,2020):
-            self.assertIn(date(year,4,30), self.holidays)
+        for year in range(1990, 2020):
+            self.assertIn(date(year, 4, 30), self.holidays)
 
     def test_labour_day(self):
         for year in range(1990, 2020):
             self.assertIn(date(year, 5, 1), self.holidays)
 
     def test_resurrection_monday(self):
-        for year in range(1990,2020):
-            self.assertIn(date(year,5,3), self.holidays)
+        for year in range(1990, 2020):
+            self.assertIn(date(year, 5, 3), self.holidays)
 
     def test_saint_georges_day(self):
         for year in range(1990, 2020):
