@@ -10,6 +10,7 @@ Released ?????? ??, ????
 - USA, Angola fixes (jusce17)
 - Kenya updates (MainaKamau92)
 - Korea updates (0xF4D3C0D3, dr-p)
+- Bulgaria updates (BasakUlker, dr-p)
 
 Version 0.11.2
 ==============
